# dz-vehicle-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  PRD.md  README.md  pyproject.toml
.gemini/: context
.gemini/commands/: speckit.clarify.toml  speckit.constitution.toml  speckit.specify.toml
.gemini/context/: api.md  auth.md  db.md  monitoring.md
.specify/memory/: constitution.md
.specify/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docker/: docker-compose.prod.yml  env.production  env.production.example
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: production.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.vue  main.ts  style.css
scripts/: prod-restart.sh  prod-start.sh  validate-prod-endpoint.sh
specs/001-docker-prod-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-admin-otp-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/10-batch-import-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/vehicle_asset_lib/: db.py  (+3 more)
tests/: test_admin.py  test_admin_otp.py  test_api_loan.py  test_assets_refactor.py  test_batch_import.py  test_cli_admin_vehicle.py  test_cli_notifications.py  test_loan.py  test_loan_records.py  test_models.py  test_monitoring.py  test_pickup.py  test_return.py  test_security.py  test_verification.py
(+108 files in other folders)
